FEAT: Working forge types.

--- a/swagger_server/cli/templates/page.html
+++ b/swagger_server/cli/templates/page.html
@@ -14,19 +14,19 @@
         <div class="collapse navbar-collapse" id="navbarsExample07XL">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{{ url_root }}/">Overview</a>
+              <a class="nav-link active" aria-current="page" href="{{ url_root }}/index.html">Overview</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_root }}/CSIP/">CSIP</a>
+              <a class="nav-link" href="{{ url_root }}/CSIP/index.html">CSIP</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_root }}/SIP/">SIP</a>
+              <a class="nav-link" href="{{ url_root }}/SIP/index.html">SIP</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_root }}/DIP/">DIP</a>
+              <a class="nav-link" href="{{ url_root }}/DIP/index.html">DIP</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_root }}/skipped/">Skipped</a>
+              <a class="nav-link" href="{{ url_root }}/skipped/index.html">Skipped</a>
             </li>
           </ul>
         </div>
